<resources>
    <string name="app_name">Will you survive</string>
    <string name="r_ponds_aux_questions_et_d_couvre_si_tu_es_capable_de_survivre_aux_diff_rentes_situations">Réponds aux questions et découvre si tu es capable de survivre aux différentes situations</string>
    <string name="commencer">"    commencer"</string>
    <string name="question_1_15">Question 1/15</string>
    <string name="tu_es">Tu es ?</string>
    <string name="un_homme">Un homme</string>
    <string name="une_femme">Une femme</string>
    <string name="quel_ge_as_tu">Quel âge as-tu ?</string>
    <string name="moins_de_18_ans">Moins de 18 ans</string>
    <string name="entre_18_et_25_ans">Entre 18 et 25 ans</string>
    <string name="entre_26_et_35_ans">Entre 26 et 35 ans</string>
    <string name="entre_36_et_45_ans">Entre 36 et 45 ans</string>
    <string name="plus_de_45_ans">Plus de 45 ans</string>
    <string name="question_2_15">Question 2/15</string>
    <string name="question_3_15">Question 3/15</string>
    <string name="une_explosion_nucl_aire_vient_de_se_produire_et_tu_dois_te_nourrir">Une explosion nucléaire vient de se produire et tu dois te nourrir :</string>
    <string name="ces_champignons_en_pleine_for_t_ont_l_air_excellents">Ces champignons en pleine forêt ont l\'air excellents</string>
    <string name="vive_les_bo_tes_de_conserve">Vive les boîtes de conserve</string>
    <string name="une_partie_de_p_che_s_impose">Une partie de pêche s\'impose</string>
    <string name="je_ne_mange_pas">Je ne mange pas</string>
    <string name="un_trou_tr_s_profond_dans_la_terre_pour_d_busquer_insectes_et_racines">Un trou très profond dans la terre pour débusquer insectes et racines</string>
    <string name="question_4_15">Question 4/15</string>
    <string name="tu_entres_dans_un_supermarch_d_vast_tu_prends_quel_objet">Tu entres dans un supermarché dévasté, tu prends quel objet ?</string>
    <string name="une_bouteille_de_whisky">Une bouteille de Whisky</string>
    <string name="direction_le_rayon_bricolage">Direction le rayon bricolage</string>
    <string name="je_d_valise_le_rayon_pharmacie">Je dévalise le rayon pharmacie</string>
    <string name="je_d_valise_le_rayon_alimentation">Je dévalise le rayon alimentation</string>
    <string name="question_5_15">Question 5/15</string>
    <string name="tu_aper_ois_au_loin_un_groupe_d_individus">Tu aperçois au loin un groupe d’individus :</string>
    <string name="tu_te_caches_en_attendant_qu_ils_approchent">Tu te caches en attendant qu\'ils approchent</string>
    <string name="tu_t_enfuis">Tu t\'enfuis</string>
    <string name="tu_fonces_vers_eux_pour_faire_connaissance">Tu fonces vers eux pour faire connaissance</string>
    <string name="a_doit_tre_une_hallucination_tu_continues_ta_rout">Ça doit être une hallucination, tu continues ta route</string>
    <string name="tu_tends_un_pi_ge_pour_les_capturer">Tu tends un piège pour les capturer</string>
    <string name="question_6_15">Question 6/15</string>
    <string name="une_personne_mourante_te_demande_de_l_aide">Une personne mourante te demande de l\'aide :</string>
    <string name="tu_abr_ges_ses_souffrances">Tu abrèges ses souffrances</string>
    <string name="tu_la_prends_avec_toi_et_essaye_de_la_soigner">Tu la prends avec toi et essaye de la soigner</string>
    <string name="tu_la_d_pouilles_de_tous_ses_objets_utiles">Tu la dépouilles de tous ses objets utiles</string>
    <string name="qui_me_parle_non_je_ne_vous_entends_pas">Qui me parle ? Non je ne vous entends pas !</string>
    <string name="tu_r_cup_res_son_sang">Tu récupères son sang</string>
    <string name="cool_le_Blu_ray_du_seigneur_des_anneaux">Cool ! Le Blu-ray du Seigneur des Anneaux</string>
    <string name="question_7_15">Question 7/15</string>
    <string name="sinon_ton_film_pr_f_r">Sinon, ton film préféré ?</string>
    <string name="je_suis_une_l_gende">Je suis une légende</string>
    <string name="_28_jours_plus_tard">28 jours plus tard</string>
    <string name="wall_e">WALL-E</string>
    <string name="la_route">La route</string>
    <string name="l_arm_e_des_12_singes">L’armée des 12 singes</string>
    <string name="question_8_15">Question 8/15</string>
    <string name="vous_n_tes_plus_que_deux_sur_terre_et_en_plus_de_sexe_oppos">Vous n’êtes plus que deux sur terre et en plus de sexe opposé :</string>
    <string name="va_falloir_commencer_repeupler">Va falloir commencer à repeupler</string>
    <string name="tu_as_un_moyen_de_contraception">Tu as un moyen de contraception ?</string>
    <string name="c_est_dommage_je_n_aime_pas_les_blond_e_s">C’est dommage je n’aime pas les blond(e)s</string>
    <string name="tu_le_la_sacrifies_pour_survivre_un_peu_plus">Tu le/la sacrifies pour survivre un peu plus</string>
    <string name="question_9_15">Question 9/15</string>
    <string name="tu_cherches_de_l_argile_pour_faire_un_pansement">Tu cherches de l’argile pour faire un pansement</string>
    <string name="tu_d_sinfectes_avec_un_fond_de_whisky">Tu désinfectes avec un fond de whisky</string>
    <string name="tu_te_coupes_le_bras">Tu te coupes le bras</string>
    <string name="pas_grave_a_va_s_cher">Pas grave ça va sécher</string>
    <string name="tu_chauffes_la_plaie_et_tu_fais_un_garrot">Tu chauffes la plaie et tu fais un garrot</string>
    <string name="tu_viens_de_t_entailler_profond_ment_le_bras">Tu viens de t’entailler profondément le bras :</string>
    <string name="question_10_15">Question 10/15</string>
    <string name="question_11_15">Question 11/15</string>
    <string name="dans_une_voiture">Dans une voiture</string>
    <string name="sur_une_le">Sur une île</string>
    <string name="dans_un_b_timent">Dans un bâtiment</string>
    <string name="dans_un_camp">Dans un camp</string>
    <string name="dans_une_maison">Dans une maison</string>
    <string name="voil_d_j_1_mois_que_c_est_la_fin_du_monde_tu_es_r_fugi">Voilà déjà 1 mois que c\'est la fin du monde. Tu es réfugié :</string>
    <string name="toi_tu_vas_droite_et_moi_gauche">Toi tu vas à droite et moi à gauche</string>
    <string name="un_b_b">Un bébé</string>
    <string name="un_chien">Un chien</string>
    <string name="un_enfant">Un enfant</string>
    <string name="un_homme_banal">Un homme banal</string>
    <string name="une_femme_enceine">Une femme enceine</string>
    <string name="si_tu_devais_faire_un_choix_qui_sauverais_tu">Si tu devais faire un choix. Qui sauverais-tu ?</string>
    <string name="question_12_15">Question 12/15</string>
    <string name="question_13_15">Question 13/15</string>
    <string name="un_homme_te_menace_avec_un_pistolet_que_fais_tu">Un homme te menace avec un pistolet. Que fais-tu ?</string>
    <string name="tu_restes_tranquille">Tu restes tranquille</string>
    <string name="tu_n_gocies">Tu négocies</string>
    <string name="tu_tentes_de_le_d_sarmer">Tu tentes de le désarmer</string>
    <string name="en_voiture">En voiture</string>
    <string name="cheval">À cheval</string>
    <string name="en_trottinette">En trottinette</string>
    <string name="pied">À pied</string>
    <string name="tu_dois_aller_chercher_des_provisions_comment_y_vas_tu">Tu dois aller chercher des provisions. Comment y vas-tu ?</string>
    <string name="question_14_15">Question 14/15</string>
    <string name="en_moto">En moto</string>
    <string name="question_15_15">Question 15/15</string>
    <string name="des_inconnus_attaquent_ton_groupe_quelle_est_ta_premi_re_r_action">Des inconnus attaquent ton groupe. Quelle est ta première réaction ?</string>
    <string name="tu_fuis_seul_e">Tu fuis seul(e)</string>
    <string name="tu_tires_dans_le_tas">Tu tires dans le tas</string>
    <string name="tu_labores_un_plan">Tu élabores un plan</string>
    <string name="tu_fuis_avec_ton_groupe">Tu fuis avec ton groupe</string>
    <string name="tu_te_laisses_tuer">Tu te laisses tuer</string>
    <string name="voici_votre_r_sultat">Voici ton résultat :</string>
    <string name="textview">TextView</string>
    <string name="partager">Partager</string>
    <string name="quelle_adresse_email_veux_tu_envoyer_ton_r_sultat">À quelle adresse email veux-tu envoyer ton résultat ?</string>
    <string name="email">Email</string>
    <string name="quitter">Quitter</string>
    <string name="tu_dois_reconstruire_le_monde_tu_pars_sur_quelle_base">Tu dois reconstruire le monde, tu pars sur quelle base ?</string>
    <string name="chacun_fait_tout_ce_qu_il_veut">Chacun fait tout ce qu’il veut</string>
    <string name="une_soci_t_polygame_bas_e_sur_le_sexe">Une société polygame basée sur le sexe</string>
    <string name="la_dictature_il_n_y_a_que_a_qui_marche">La dictature, il n’y a que ça qui marche</string>
    <string name="un_monde_juste_bas_sur_l_change_et_le_partage">Un monde juste basé sur l’échange et le partage</string>
    <string name="un_m_lange_entre_mad_max_et_avatar">Un mélange entre Mad Max et Avatar</string>
    <string name="ex_25">Ex:25</string>
    />

</resources>